# honda

./: .pre-commit-config.yaml  .readthedocs.yaml  DESIGN.md  LICENSE  README.md  pyproject.toml
docs/: cli.rst  conf.py  index.rst  requirements.txt
docs/api/: index.rst
docs/api/config/: condarc.rst  env.rst  index.rst
honda/: cache.py  errors.py  http.py
honda/cli/: __init__.py  _base.py  _cmd_config.py  clean.py  compare.py  config.py  create.py  info.py  init.py  install.py  list.py  main.py  remove.py  repo.py  search.py  update.py
honda/cli/commands/: clean.py  compare.py  config.py  create.py  info.py  remove.py  repo.py  search.py  update.py
honda/cli/display/: managers.py  progress.py  table.py
honda/config/: __init__.py  condarc.py  constants.py  dependencies.py  env.py  main.py
honda/types/: channel.py
tests/config/: test_condarc.py
