[tool.poetry]
name = "honda"
version = "0.1.0"
description = "Conda compatible package manager; FOR EDUCATIONAL PURPOSES ONLY"
authors = ["Travis Hathaway <travis.j.hathaway@gmail.com>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.2"
rich = "^12.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
pylint = "^2.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
