[tool.poetry]
name = "honda"
version = "0.1.0"
description = "Conda compatible package manager; FOR EDUCATIONAL PURPOSES ONLY"
authors = ["Travis Hathaway <travis.j.hathaway@gmail.com>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.2"
rich = "^12.3.0"
click-help-colors = "^0.9.1"
pyaml = "^21.10.1"
aiohttp = "^3.8.1"
aiofiles = "^0.8.0"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.13.7"
pre-commit = "^2.18.1"
Sphinx = "^4.5.0"
sphinx-autodoc-typehints = "^1.18.1"
pip-audit = "^2.1.1"
sphinx-click = "^4.0.3"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
honda = "honda.cli.main:cli"

[tool.pylint.master]
output-format = "colorized"
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    'import-error',
    'missing-module-docstring',
    'missing-function-docstring',
]
